<resources>
    <string name="app_name">CustomPlayer</string>
    <string name="skip_the_current_video_back_by_few_seconds">Skip the current Video back by few seconds</string>
    <string name="skip_the_current_video_forward_by_few_seconds">Skip current video forward by few seconds</string>
    <string name="play_the_video">Play the Video</string>
    <string name="move_back_from_video_player">move back from video player</string>
    <string name="back_button_for_previous_video">back button for previous video</string>
    <string name="button_for_playing_next_video">button for playing next video</string>
    <string name="volume_icon">volume_icon</string>
    <string name="clickable_to_scale_the_player">clickable to scale the player</string>
    <string name="click_to_maximise_the_player_view">click to maximise the player view</string>
    <string name="click_to_open_settings">Click to open settings</string>
    <string name="image_showing_scrub_image">image showing scrub image</string>
</resources>