<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/custom_control"
    android:layout_gravity="bottom"
    android:background="#00FFFFFF"
    android:layoutDirection="ltr">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:id="@+id/lltop"
    android:gravity="center"
    tools:visibility="visible"
    android:layout_marginStart="20dp"
    android:padding="1dp"
    android:layout_marginTop="20dp"
    android:orientation="horizontal"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        android:padding="1dp"
        android:src="@drawable/playerback"
        android:contentDescription="@string/move_back_from_video_player">

    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:id="@+id/content_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        tools:text="Art Of Living Launches Mission Jindagi">

    </TextView>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/ll_centre">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:padding="1dp"
            android:focusableInTouchMode="true"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/skip_pre_btn"
            android:src="@drawable/skipbwd"
            android:contentDescription="@string/skip_the_current_video_back_by_few_seconds"
            android:focusable="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/play_btn"
            android:clickable="true"
            android:layout_marginHorizontal="5dp"
            android:padding="1dp"
            android:src="@drawable/playicon"
            android:contentDescription="@string/play_the_video"
            android:focusable="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/skip_fwd_btn"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginHorizontal="5dp"
            android:padding="1dp"
            android:src="@drawable/skipfwd"
            android:contentDescription="@string/skip_the_current_video_back_by_few_seconds" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:orientation="horizontal"
        tools:visibility="visible"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        android:id="@+id/ll_bottom">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/preback"
            android:id="@+id/pre_video_btn"
            android:clickable="true"
            android:focusable="true"
            android:padding="1dp"
            android:contentDescription="@string/back_button_for_previous_video" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/next_video_btn"
            android:clickable="true"
            android:focusable="true"
            android:padding="1dp"
            android:src="@drawable/nextplayback"
            android:contentDescription="@string/button_for_playing_next_video" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/volume_btn"
            android:padding="1dp"
            android:focusable="true"
            android:clickable="true"
            android:src="@drawable/volumeplayer"
            android:contentDescription="@string/volume_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ll_bottom_end"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_gravity="end">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/iv_setting"
                android:clickable="true"
                android:focusable="true"
                android:padding="1dp"
                android:src="@drawable/settings"
                android:contentDescription="@string/click_to_open_settings"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/iv_scale"
                android:clickable="true"
                android:focusable="true"
                android:padding="1dp"
                android:src="@drawable/layoutscale"
                android:contentDescription="@string/clickable_to_scale_the_player"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/iv_maximise"
                android:clickable="true"
                android:focusable="true"
                android:padding="1dp"
                android:src="@drawable/maximise"
                android:contentDescription="@string/click_to_maximise_the_player_view"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/previewFrameLayout"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/video_frame"
        android:maxWidth="160dp"
        android:maxHeight="90dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.35"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/video_frame_width"
            android:contentDescription="@string/image_showing_scrub_image"
            android:scaleType="fitXY" />
    </FrameLayout>

    <com.example.ptplayer.player.CustomScrubber
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="2dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/player_scrub">

    </com.example.ptplayer.player.CustomScrubber>

</androidx.constraintlayout.widget.ConstraintLayout>