<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/custom_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="#00FFFFFF"
    android:layoutDirection="ltr">

    <com.example.ptplayer.player.utils.LoadingView
        android:id="@+id/exo_buffering"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.example.ptplayer.player.utils.LoadingView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/backgroundBanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            />

        <View
            android:id="@+id/gradient_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@id/backgroundBanner"
            android:background="@drawable/audio_scrim_bottom"
            app:layout_constraintTop_toTopOf="@id/backgroundBanner"
            app:layout_constraintStart_toStartOf="@id/backgroundBanner"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/aol_main"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/lltop"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/move_back_from_video_player"
            android:padding="1dp"
            android:src="@drawable/playerback">

        </ImageView>

        <TextView
            android:id="@+id/content_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="top"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Art Of Living Launches Mission Jindagi">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/exo_prev"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:clickable="true"
            android:contentDescription="@string/back_button_for_previous_video"
            android:focusable="true"
            android:padding="1dp"
            android:src="@drawable/preback" />

        <ImageView
            android:id="@+id/play_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:padding="1dp"
            android:src="@drawable/play_audio"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/pause_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="25dp"
            android:clickable="true"
            android:contentDescription="@string/play_the_video"
            android:focusable="true"
            android:padding="2dp"
            android:src="@drawable/baseline_pause_24"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/exo_next"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="220dp"
            android:clickable="true"
            android:contentDescription="@string/button_for_playing_next_video"
            android:focusable="true"
            android:padding="1dp"
            android:src="@drawable/nextplayback" />

        <ImageView
            android:id="@+id/exo_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:clickable="true"
            android:contentDescription="@string/click_to_open_settings"
            android:focusable="true"
            android:nextFocusLeft="@id/exo_next"
            android:padding="1dp"
            android:src="@drawable/dot_player" />

        <LinearLayout
            android:id="@+id/ll_bottom_end"
            android:layout_width="496dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:gravity="end|center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/volume_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:clickable="true"
                android:contentDescription="@string/volume_icon"
                android:focusable="true"
                android:nextFocusRight="@id/exo_settings"
                android:padding="1dp"
                android:src="@drawable/volume_player" />

            <SeekBar
                android:id="@+id/volume_seekbar"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:focusable="false"
                android:progressDrawable="@drawable/custom_seekbar_progress"
                android:thumb="@drawable/custom_thumb"
                android:visibility="visible">

            </SeekBar>

            <ImageView
                android:id="@+id/exo_repeat"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:clickable="true"
                android:contentDescription="@string/click_to_open_settings"
                android:focusable="true"
                android:nextFocusLeft="@id/volume_btn"
                android:padding="1dp"
                android:src="@drawable/icon_repeat" />

            <ImageView
                android:id="@+id/exo_shuffle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:clickable="true"
                android:contentDescription="@string/click_to_open_settings"
                android:focusable="true"
                android:nextFocusLeft="@id/volume_btn"
                android:padding="1dp"
                android:src="@drawable/icon_shuffle" />

            <ImageView
                android:id="@+id/iv_screen_mode"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:clickable="true"
                android:contentDescription="@string/click_to_maximise_the_player_view"
                android:focusable="true"
                android:padding="1dp"
                android:src="@drawable/maximise" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/player_scrub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@id/exo_position"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="02:45">

        </TextView>

        <TextView
            android:id="@id/exo_duration"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="02:45">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.media3.ui.DefaultTimeBar
        android:id="@+id/player_scrub"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:clickable="true"
        android:defaultFocusHighlightEnabled="true"
        android:focusable="true"
        android:paddingVertical="2dp"
        app:buffered_color="#FFFF00"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:played_color="@color/aol_secondary"
        app:scrubber_disabled_size="2dp"
        app:scrubber_dragged_size="5dp"
        app:scrubber_enabled_size="5dp"
        app:touch_target_height="5dp"
        app:unplayed_color="@color/lb_grey"
        tools:targetApi="o">

    </androidx.media3.ui.DefaultTimeBar>

</androidx.constraintlayout.widget.ConstraintLayout>
